--- a/Crusty.Engine/Crusty.Engine.vcxproj.filters
+++ b/Crusty.Engine/Crusty.Engine.vcxproj.filters
@@ -72,6 +72,15 @@
     <ClCompile Include="src\Crusty\Renderer\Text.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\Crusty\Common\Interpreters\IniParser.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Crusty\Common\Assets.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Crusty\Common\Functions.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Crusty\Common\Common.h">
@@ -1152,6 +1161,18 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="src\Crusty\Renderer\Text.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Crusty\Common\Settings.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Crusty\Common\Interpreters\IniParser.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Crusty\Common\Assets.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Crusty\Common\Functions.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
